# esp-stock-data

./: CLAUDE.md  CLOUD.md  CMakeLists.txt  README.md  sdkconfig.defaults
.claude/agents/: firmware-builder.md  market-ui-widget.md
components/esp_lcd_jd9165/: CMakeLists.txt  esp_lcd_jd9165.c
components/esp_lcd_jd9165/include/: esp_lcd_jd9165.h
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  board_config.h  bsp_display.c  bsp_display.h  idf_component.yml  market_api.c  market_api.h  ui.c  ui.h  ui_symbols.c  ui_symbols.h  ui_theme.h  ui_touch_debug.c  ui_touch_debug.h  ui_wifi.c  ui_wifi.h  wifi_manager.c  wifi_manager.h
